# byte_pair_ram

./: .gitignore  CMakeLists.txt
include/: Kmer.h  byte_pair_encoder.h  nucleic_acid.h  parser.h
src/: byte_pair_encoder.cpp  main.cpp  nucleic_acid.cpp  parser.cpp
